welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:31: error: reassignment to val
  return ((x==x2)||(y==y2)||(x==0)||(y=0))
                                      ^